Bug 334556 crash on startup when GTK accessibility pref enabled patch by aaronleventhal r=me sr=dbaron